--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Models to try for GDP forecasting:
+Sparse PCA
 Lasso Regression
 Ordinary Least Squares regression
 Combined l1 and l2 penalty regression
